# CSVParser

./: .eslintrc.js  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  plan.md  rollup.config.js  tsconfig.json  vitest.config.js
.github/workflows/: ci.yml
bench/: index.js
demo/: app.js  index.html
src/: index.ts  stream.ts  types.ts  worker.ts
tests/: index.test.ts
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
