[package]
name = "csv_wasm_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  "serde-serialize",
]